Added new icons.

--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -60,5 +60,9 @@
                 your creative process.
             </div>
         </section>
+        <section id="actions-panel">
+            <button class="button primary"> Order a stencil </button>
+            <button class="button"></button>
+        </section>
     </div>
 </div>
