--- a/src/app/feature/landing/components/landing/landing.component.scss
+++ b/src/app/feature/landing/components/landing/landing.component.scss
@@ -35,6 +35,11 @@ h1 {
     letter-spacing: 0px;
 }
 
+.button {
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
 .swag {
     position: relative;
 
@@ -237,6 +242,8 @@ h1 {
             align-content: flex-end;
 
             margin-top: 30px;
+            word-spacing: 2px;
+            line-height: 20px;
             @include dynamicSize(13, 16);
             justify-content: flex-end;
 
@@ -247,6 +254,9 @@ h1 {
                     width: 100%;
                 }
             }
+        }
+
+        #actions-panel {
         }
     }
 }
