--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -54,15 +54,23 @@
             </h1>
         </div>
         <section id="summary-text">
-            <div>
+            <div class="summary-element">
                 Planning mobile products is not always
                 digital: sometimes you may need pencil, paper and a handy stencil to speed up
                 your creative process.
             </div>
         </section>
         <section id="actions-panel">
-            <button class="button primary"> Order a stencil </button>
-            <button class="button"></button>
+            <div>
+                <div class="columns columns-2">
+                    <div class="column summary-element">
+                        <button class="button primary"> Order a stencil </button>
+                    </div>
+                    <div class="column summary-element">
+                        <button class="button">Lean More <i class="icon-arrow-edge"></i></button>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </div>
