Finished top block.

--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -1,6 +1,12 @@
 <div id="top-block" class="container background-container">
     <div class="background">
         <img src="assets/images/landing/main-background.png" />
+
+        <div id="made-in">
+            <div>
+                Made in Belarus
+            </div>
+        </div>
     </div>
     <div id="menu-selector">
         <div>
@@ -11,11 +17,6 @@
                     <div class="dash"></div>
                 </div>
             </i>
-        </div>
-    </div>
-    <div id="made-in">
-        <div>
-            Made in Belarus
         </div>
     </div>
     <div id="main-photo">
@@ -99,6 +100,13 @@
                                 <i class="dot icon-circle"></i>
                             </ng-template>
                         </my-repeater>
+                    </div>
+                    <div>
+                    </div>
+                </div>
+                <div id="right-circle">
+                    <div>
+                        <i class="icon-empty-thin-circle"></i>
                     </div>
                 </div>
             </div>
