--- a/src/app/feature/landing/components/landing/landing.component.scss
+++ b/src/app/feature/landing/components/landing/landing.component.scss
@@ -63,7 +63,6 @@ h1 {
         left: 0;
         top: 0;
         width: 100%;
-        height: 100%;
         display: flex;
         align-items: center;
         flex-flow: column;
@@ -87,6 +86,11 @@ h1 {
     &.vertical {
         flex-flow: column;
     }
+
+    .dot-group {
+        .dot {
+        }
+    }
 }
 
 .dash {
@@ -107,7 +111,6 @@ h1 {
 .contacts-list {
     display: flex;
     justify-content: space-around;
-    flex-grow: 1;
 }
 
 $columnMargins: 10px;
@@ -134,13 +137,32 @@ $columnMargins: 10px;
     position: relative;
 
     > .background {
-        opacity: 0.1;
         min-width: 100%;
         z-index: -1;
+
+        img {
+            max-width: 200%;
+            opacity: 0.1;
+        }
 
         @include phones-portrait {
             img {
                 max-height: 100%;
+            }
+        }
+
+        #made-in {
+            position: absolute;
+            top: 40%;
+            right: 0;
+            font-size: 14px;
+
+            > div {
+                margin-right: -75%;
+                letter-spacing: 0.1em;
+                font-weight: 400;
+                text-transform: uppercase;
+                transform: rotate(90deg);
             }
         }
     }
@@ -218,19 +240,6 @@ $columnMargins: 10px;
         }
     }
 
-    #made-in {
-        position: absolute;
-        top: 40%;
-        right: 0;
-        font-size: 16px;
-
-        > div {
-            margin-right: -50%;
-            text-transform: capitalize;
-            transform: rotate(90deg);
-        }
-    }
-
     #summary {
         width: 40%;
         margin-top: 10%;
@@ -263,7 +272,6 @@ $columnMargins: 10px;
             }
 
             .summary-element {
-                margin-top: 30px;
             }
         }
 
@@ -271,9 +279,17 @@ $columnMargins: 10px;
             word-spacing: 2px;
             line-height: 20px;
             @include dynamicSize(13, 16);
+
+            .summary-element {
+                margin-top: 30px;
+            }
         }
 
         #actions-panel {
+            margin-top: 15px;
+            .summary-element {
+                margin-top: 15px;
+            }
             > div {
                 width: 90%;
                 margin-right: -20%;
@@ -294,29 +310,47 @@ $columnMargins: 10px;
                 }
             }
 
+            #right-circle {
+                font-size: 110px;
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                overflow: hidden;
+                > div {
+                    margin-right: -80px;
+                }
+            }
+
             #top-dots {
-                display: inline-block;
+                width: 45px;
+                height: 75px;
                 font-size: 5px;
-                .dot-group {
-                    margin-bottom: 10px;
-                    .dot {
-                        margin-right: 10px;
-                    }
+                margin-top: 30px;
+                margin-bottom: 30px;
+
+                .dot {
+                    transform: scale(0.8, 1.35);
                 }
             }
 
             .contacts {
                 display: flex;
-            }
+                align-items: stretch;
 
-            #right-dots {
-                display: inline-block;
-                font-size: 7px;
-                .dot-group {
-                    margin-bottom: 28px;
-                    .dot {
-                        margin-right: 16px;
-                    }
+                .contacts-list {
+                    flex-grow: 2;
+                }
+
+                > div {
+                    flex-grow: 1;
+                }
+
+                #right-dots {
+                    flex-grow: 4;
+                    height: 60px;
+                    max-width: 120px;
+
+                    font-size: 7px;
                 }
             }
         }
