--- a/src/app/feature/landing/components/landing/landing.component.scss
+++ b/src/app/feature/landing/components/landing/landing.component.scss
@@ -1,54 +1,6 @@
 @import "../../../mixins.scss";
 @import "../../../variables.scss";
 
-$swagBackground: #c9f3f5;
-
-@mixin dynamicSize($minSize, $maxSize) {
-    $growth: ($maxSize - $minSize) / (1400 - 350);
-    $base: $minSize - 350 * $growth;
-
-    font-size: calc(#{$base}px + #{$growth * 100}vmin);
-    @include phones-portrait {
-        font-size: calc(#{$base}px + #{$growth * 100}vmin);
-    }
-}
-
-section {
-    @include phones-portrait {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    margin: 0;
-}
-
-h1 {
-    font-family: Arvo;
-    @include dynamicSize(40, 60);
-    font-weight: 700;
-    letter-spacing: 0px;
-}
-
-.swag {
-    position: relative;
-
-    .swag-background {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        background-color: $swagBackground;
-        width: 100%;
-        height: 75%;
-        z-index: -1;
-    }
-}
-
 .container {
     position: relative;
     display: flex;
@@ -91,13 +43,6 @@ h1 {
         .dot {
         }
     }
-}
-
-.dash {
-    background-color: white;
-    padding: 10%;
-    width: 100%;
-    border-radius: 10%/50%;
 }
 
 .dash-group {
@@ -159,6 +104,7 @@ $columnMargins: 10px;
 
             > div {
                 margin-right: -75%;
+                margin-top: 20%;
                 letter-spacing: 0.1em;
                 font-weight: 400;
                 text-transform: uppercase;
@@ -213,7 +159,7 @@ $columnMargins: 10px;
                         left: 35%;
 
                         .dot {
-                            font-size: 0.7rem;
+                            font-size: 0.1em;
                         }
                     }
                 }
@@ -236,6 +182,14 @@ $columnMargins: 10px;
                 position: absolute;
                 left: 42.5%;
                 width: 15%;
+            }
+        }
+
+        .dash {
+            color: white;
+            display: flex;
+            i {
+                font-size: 0.035em;
             }
         }
     }
