Started new block

--- a/src/app/feature/controls/index.scss
+++ b/src/app/feature/controls/index.scss
@@ -1,3 +1,4 @@
 @import './repeater/repeater.component.scss';
 @import './buttons/button.scss';
 @import './contact-icon/contact-icon.component.scss';
+@import './photos-slider/photo-slider.component.scss';
