--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -118,3 +118,6 @@
 <div id="features-block">
     <my-features-widget></my-features-widget>
 </div>
+<div id="about-block">
+    <my-about-widget></my-about-widget>
+</div>
