--- a/src/app/feature/landing/index.scss
+++ b/src/app/feature/landing/index.scss
@@ -1,2 +1,3 @@
 @import 'components/features-widget/features-widget.component.scss';
+@import 'components/about-widget/about-widget.component.scss';
 @import 'components/landing/landing.component.scss';
