Introduced server cache

--- a/src/styles/common/text.scss
+++ b/src/styles/common/text.scss
@@ -1,4 +1,4 @@
-@import '../variables.scss';
+@import "../variables.scss";
 
 .swag {
     position: relative;
@@ -13,4 +13,7 @@
         height: 75%;
         z-index: -1;
     }
+}
+
+body {
 }
