Added fonts, markup.

--- a/src/app/feature/controls/buttons/button.scss
+++ b/src/app/feature/controls/buttons/button.scss
@@ -10,6 +10,7 @@
     border-radius: 100px;
     border: solid 1px $activeColor;
     background-color: white;
+    font-family: "Montserrat";
     font-weight: 700;
     cursor: pointer;
     text-decoration: none;
