--- a/src/app/feature/landing/components/features-widget/features-widget.component.html
+++ b/src/app/feature/landing/components/features-widget/features-widget.component.html
@@ -3,7 +3,7 @@
         <h4>
             ‒ What are the advantages
         </h4>
-        <h2>
+        <h2 class="unlimited">
             How to make the most with
             <span class="swag">our&nbsp;stencil?<span class="swag-background"></span></span>
         </h2>
@@ -25,7 +25,7 @@
             <h5 class="card-title">
                 speak to your ideas
             </h5>
-            <div class="card-description">
+            <div class="card-description description">
                 Before going digital take a stencil and a sketching pad and think a bit on paper.  
             </div>
         </div>
@@ -46,7 +46,7 @@
             <h5 class="card-title">
                 concentrate on logics
             </h5>
-            <div class="card-description">
+            <div class="card-description description">
                 Let every new feature contribute to great UX design of your product. 
             </div>
         </div>
@@ -68,7 +68,7 @@
             <h5 class="card-title">
                 share in no time
             </h5>
-            <div class="card-description">
+            <div class="card-description description">
                 Check your ideas fast and share them with team or potential users.
             </div>
         </div>
@@ -90,7 +90,7 @@
             <h5 class="card-title">
                 export to Figma
             </h5>
-            <div class="card-description">
+            <div class="card-description description">
                 Scan your paper sketches and easily import them into Figma!
             </div>
         </div>
