--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -60,7 +60,7 @@
         <section id="summary-text">
             <div class="summary-element">
                 Planning mobile products is not always
-                digital: sometimes you may need pencil, paper and a handy stencil to speed up
+                digital: sometimes you may need pencil, paper and <span class="bold">a handy stencil</span> to speed up
                 your creative process.
             </div>
         </section>
