--- a/src/styles/common/headings.scss
+++ b/src/styles/common/headings.scss
@@ -10,11 +10,15 @@ h5 {
 }
 
 h1,
-h2,
-h5 {
+h2 {
     font-family: Arvo;
     font-weight: 700;
     letter-spacing: 0px;
+    color: black;
+}
+
+h5 {
+    font-family: "Montserrat";
 }
 
 h1 {
@@ -32,6 +36,7 @@ h5 {
 h4 {
     font-size: 14px;
     font-weight: 500;
+    font-family: 'Montserrat';
     color: $appGray;
-    letter-spacing: 1.5px;
+    letter-spacing: 1px;
 }
