--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -14,6 +14,28 @@ section {
     }
 }
 
+.title {
+    padding-left: 120px;
+    text-transform: uppercase;
+
+    h2.unlimited {
+        width: 50%;
+        padding-top: 40px;
+    }
+
+    @include phones-portrait {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-top: 24px;
+
+        text-align: center;
+
+        h2 {
+            width: 100%;
+        }
+    }
+}
+
 .section {
     margin-left: 70px;
     margin-right: 70px;
