--- a/src/app/feature/landing/components/about-widget/about-widget.component.scss
+++ b/src/app/feature/landing/components/about-widget/about-widget.component.scss
@@ -39,5 +39,11 @@
                 color: black;
             }
         }
+        .order-button {
+            width: 50%;
+            @include phones-portrait {
+                width: 100%;
+            }
+        }
     }
 }
