--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -119,5 +119,5 @@
     <my-features-widget></my-features-widget>
 </div>
 <div id="about-block">
-    <my-about-widget></my-about-widget>
+    <my-about-widget [telegram]="telegram"></my-about-widget>
 </div>
