--- a/src/app/feature/landing/index.scss
+++ b/src/app/feature/landing/index.scss
@@ -1,3 +1,4 @@
 @import 'components/features-widget/features-widget.component.scss';
 @import 'components/about-widget/about-widget.component.scss';
 @import 'components/landing/landing.component.scss';
+@import 'components/ux-jams-widget/ux-jams-widget.component.scss';
