--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,6 @@ $activeColor: $appBlack;
 
 $appGray: #9FA3A7;
 $swagBackground: #c9f3f5;
+
+$shareIconContainer: #60CFD8;
+$calendarIconContainer: $swagBackground;
