--- a/src/app/feature/controls/contact-icon/contact-icon.component.scss
+++ b/src/app/feature/controls/contact-icon/contact-icon.component.scss
@@ -1,17 +1,15 @@
 @import "../../variables.scss";
 
 my-contact-icon {
-    a {
-        background-color: $activeColor;
-        font-size: 17px;
-        width: 42px;
-        height: 42px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
+    background-color: $activeColor;
+    font-size: 17px;
+    width: 2.5em;
+    height: 2.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
 
-        text-decoration: none;
-        color: white;
-    }
+    text-decoration: none;
+    color: white;
 }
