--- a/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.scss
+++ b/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.scss
@@ -46,6 +46,7 @@
                     width: 75%;
                     display: flex;
                     justify-content: center;
+                    align-items: flex-start;
 
                     img {
                         width: 75%;
