--- a/src/styles/common/card.scss
+++ b/src/styles/common/card.scss
@@ -25,6 +25,11 @@
         width: 100%;
     }
 
+    &.section {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
     .card-icon {
         font-size: 100px;
     }
