1. Added swipe functionality. 2. Fixes.

--- a/src/app/feature/controls/photos-slider/photo-slider.component.html
+++ b/src/app/feature/controls/photos-slider/photo-slider.component.html
@@ -1,4 +1,4 @@
-<div class="photo-slider">
+<div class="photo-slider" (swipeleft)="previous()" (swiperight)="next()">
     <div class="slider-controls">
         <div class="arrow left" (click)="previous()">
             <i class="icon-arrow"></i>
