--- a/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.html
+++ b/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.html
@@ -34,7 +34,7 @@
                 <br />
                 &nbsp;
                 <span class="swag">
-                    Mobile Stencil
+                    Design Jams    
                     <span class="swag-background"></span>
                 </span>
             </h2>
