--- a/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.scss
+++ b/src/app/feature/landing/components/ux-jams-widget/ux-jams-widget.component.scss
@@ -49,7 +49,8 @@
                     align-items: flex-start;
 
                     img {
-                        width: 75%;
+                        min-width: 65%;
+                        max-width: 75%;
                     }
                 }
             }
