Added order block

--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -130,3 +130,6 @@
 <div id="ux-jams-block">
     <my-ux-jams-widget  [instagramLabel]="instagramLabel" [instagram]="instagram" [uxJamsGroupLabel]="uxJamsGroupLabel" [uxJamsGroup]="uxJamsGroup"></my-ux-jams-widget>
 </div>
+<div id="order-block">
+    <my-order-widget></my-order-widget>
+</div>
