--- a/src/app/feature/landing/index.scss
+++ b/src/app/feature/landing/index.scss
@@ -2,3 +2,4 @@
 @import 'components/about-widget/about-widget.component.scss';
 @import 'components/landing/landing.component.scss';
 @import 'components/ux-jams-widget/ux-jams-widget.component.scss';
+@import 'components/order-widget/order-widget.component.scss';
