--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,6 @@ $swagBackground: #c9f3f5;
 
 $shareIconContainer: #60CFD8;
 $calendarIconContainer: $swagBackground;
+
+$orderBackground: #3C3C3C;
+$orderSwagBackground: #626262;
