--- a/src/app/feature/landing/components/about-widget/about-widget.component.html
+++ b/src/app/feature/landing/components/about-widget/about-widget.component.html
@@ -42,9 +42,9 @@
                 </span>
             </p>
             <br/>
-            <a class="order-button button primary" [href]="telegram | contactLinkPipe:ContactType.Telegram | bypassDomSecurityPipe" target="_blank">
+            <button class="order-button button primary" (click)="orderStencil()">
                 Order a stencil
-            </a>
+            </button>
             <p>
                 *and get a sketching pad for free
             </p>
