--- a/src/app/feature/landing/components/order-widget/order-widget.component.html
+++ b/src/app/feature/landing/components/order-widget/order-widget.component.html
@@ -3,7 +3,7 @@
         <img src="assets/images/gallery/order-stencil.jpg" />
     </div>
     <div class="order-form-container">
-        <div class="section">
+        <div id="{{ orderId }}" class="section">
             <h4>
                 ‒ Be the First to get It
             </h4>
@@ -22,9 +22,9 @@
             <br />
         </div>
         <div class="form-container">
-            <div class="column">
+            <div class="column-section">
             </div>
-            <div id="{{ orderId }}" class="frame-column">
+            <div class="frame-column">
                 <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeIyRi8o68ROJtK6xB-1bq6taeiUGKKGfEHQ3yAYajVdVixOA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">
                     Loading…
                 </iframe>
