--- a/src/app/feature/landing/components/order-widget/order-widget.component.scss
+++ b/src/app/feature/landing/components/order-widget/order-widget.component.scss
@@ -25,7 +25,7 @@
 
         .form-container {
             display: flex;
-            .column {
+            .column-section {
                 flex-grow: 1;
             }
             .frame-column {
@@ -35,6 +35,7 @@
             .google-form-frame {
                 width: 100%;
                 min-width: 350px;
+                max-width: 600px;
                 height: 950px;
             }
         }
