--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -30,7 +30,8 @@ section {
 
         text-align: center;
 
-        h2, h2.unlimited {
+        h2,
+        h2.unlimited {
             width: 100%;
         }
     }
@@ -43,5 +44,13 @@ section {
     @include phones-portrait {
         margin-left: 30px;
         margin-right: 30px;
+    }
+}
+
+.column-section {
+    max-width: 40px;
+
+    @include phones-portrait {
+        max-width: 10px;
     }
 }
