--- a/src/app/feature/controls/contact-icon/contact-icon.component.scss
+++ b/src/app/feature/controls/contact-icon/contact-icon.component.scss
@@ -5,6 +5,8 @@ my-contact-icon {
     font-size: 17px;
     width: 2.5em;
     height: 2.5em;
+    min-width: 2.5em;
+    min-height: 2.5em;
     display: flex;
     align-items: center;
     justify-content: center;
