--- a/src/app/feature/controls/index.scss
+++ b/src/app/feature/controls/index.scss
@@ -1,4 +1,6 @@
-@import './repeater/repeater.component.scss';
-@import './buttons/button.scss';
-@import './contact-icon/contact-icon.component.scss';
-@import './photos-slider/photo-slider.component.scss';
+@import 'repeater/repeater.component.scss';
+@import 'buttons/button.scss';
+@import 'circle-icon/circle-icon.component.scss';
+@import 'photos-slider/photo-slider.component.scss';
+@import 'menu/menu-component.scss';
+@import 'back-to-top/back-to-top.component.scss';
