--- a/src/app/feature/landing/components/order-widget/order-widget.component.html
+++ b/src/app/feature/landing/components/order-widget/order-widget.component.html
@@ -2,8 +2,8 @@
     <div class="order-stencil">
         <img src="assets/images/gallery/order-stencil.jpg" />
     </div>
-    <div class="order-form-container">
-        <div id="{{ orderId }}" class="section">
+    <div id="{{ LandingMenu.Order }}" class="order-form-container">
+        <div class="section">
             <h4>
                 ‒ Be the First to get It
             </h4>
