--- a/src/app/feature/landing/index.scss
+++ b/src/app/feature/landing/index.scss
@@ -3,3 +3,4 @@
 @import 'components/landing/landing.component.scss';
 @import 'components/ux-jams-widget/ux-jams-widget.component.scss';
 @import 'components/order-widget/order-widget.component.scss';
+@import 'components/footer-widget/footer-widget.component.scss';
