--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $activeColor: $appBlack;
 
 $appGray: #9FA3A7;
 $swagBackground: #c9f3f5;
+$linkColor: #B4B4B4;
 
 $shareIconContainer: #60CFD8;
 $calendarIconContainer: $swagBackground;
