--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div id="top-block" class="container background-container">
+<div class="top-block container background-container">
     <div class="background">
         <img src="assets/images/landing/main-background.png" />
 
@@ -89,20 +89,20 @@
                 </div>
                 <div class="contacts">
                     <div class="contacts-list">
-                        <my-contact-link [contact]="instagram" [contactType]="ContactType.Instagram">
-                            <my-contact-icon iconClass="icon-instagram">
-                            </my-contact-icon>
+                        <my-contact-link [contact]="contacts.instagram" [contactType]="ContactType.Instagram">
+                            <my-circle-icon iconClass="icon-instagram">
+                            </my-circle-icon>
                         </my-contact-link>
-                        <my-contact-link [contact]="telegram" [contactType]="ContactType.Telegram">
-                            <my-contact-icon iconClass="icon-telegram">
-                            </my-contact-icon>
+                        <my-contact-link [contact]="contacts.telegram" [contactType]="ContactType.Telegram">
+                            <my-circle-icon iconClass="icon-telegram">
+                            </my-circle-icon>
                         </my-contact-link>
-                        <my-contact-link [contact]="mail" [contactType]="ContactType.Mail">
-                            <my-contact-icon iconClass="icon-google">
-                            </my-contact-icon>
+                        <my-contact-link [contact]="contacts.mail" [contactType]="ContactType.Mail">
+                            <my-circle-icon iconClass="icon-google">
+                            </my-circle-icon>
                         </my-contact-link>
                     </div>
-                    <div id="right-dots" class="dot-group vertical">
+                    <div class="dot-group vertical horizontal-dots">
                         <my-repeater cols="6" rows="3" rowClass="dot-group">
                             <ng-template #item>
                                 <i class="dot icon-circle"></i>
@@ -121,15 +121,18 @@
         </section>
     </div>
 </div>
-<div id="features-block">
+<div id="{{ LandingMenu.Advantages }}">
     <my-features-widget></my-features-widget>
 </div>
-<div id="about-block">
-    <my-about-widget [telegram]="telegram" [orderId]="orderId"></my-about-widget>
+<div id='{{ LandingMenu.Product }}'>
+    <my-about-widget [contacts]="contacts"></my-about-widget>
 </div>
-<div id="ux-jams-block">
-    <my-ux-jams-widget  [instagramLabel]="instagramLabel" [instagram]="instagram" [uxJamsGroupLabel]="uxJamsGroupLabel" [uxJamsGroup]="uxJamsGroup"></my-ux-jams-widget>
+<div id="{{ LandingMenu.UxJams }}">
+    <my-ux-jams-widget [contacts]="contacts"></my-ux-jams-widget>
 </div>
 <div id="order-block">
-    <my-order-widget [orderId]="orderId"></my-order-widget>
+    <my-order-widget></my-order-widget>
+</div>
+<div id="footer-block">
+    <my-footer-widget [contacts]="contacts"></my-footer-widget>
 </div>
