--- a/src/styles/fonts/draw-b4.icons.css
+++ b/src/styles/fonts/draw-b4.icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'draw-b4';
-  src:  url('~/fonts/draw-b4.eot?7o6ldf');
-  src:  url('~/fonts/draw-b4.eot?7o6ldf#iefix') format('embedded-opentype'),
-    url('~/fonts/draw-b4.ttf?7o6ldf') format('truetype'),
-    url('~/fonts/draw-b4.woff?7o6ldf') format('woff'),
-    url('~/fonts/draw-b4.svg?7o6ldf#draw-b4') format('svg');
+  src:  url('~/fonts/draw-b4.eot?a8uv55');
+  src:  url('~/fonts/draw-b4.eot?a8uv55#iefix') format('embedded-opentype'),
+    url('~/fonts/draw-b4.ttf?a8uv55') format('truetype'),
+    url('~/fonts/draw-b4.woff?a8uv55') format('woff'),
+    url('~/fonts/draw-b4.svg?a8uv55#draw-b4') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-curve-line:before {
+  content: "\e949";
+}
+.icon-heart:before {
+  content: "\e94a";
+}
 .icon-export-to-figma .path1:before {
   content: "\e903";
   color: rgb(51, 51, 51);
