--- a/src/styles/fonts/draw-b4.icons.extensions.scss
+++ b/src/styles/fonts/draw-b4.icons.extensions.scss
@@ -6,7 +6,18 @@
 }
 
 .icon-arrow {
-    &.left {
+    &-left {
         transform: rotate(180deg);
+
+        &:before {
+            content: "\e93d";
+        }
+    }
+    &-top {
+        transform: rotate(270deg);
+
+        &:before {
+            content: "\e93d";
+        }
     }
 }
