--- a/src/app/feature/landing/components/order-widget/order-widget.component.html
+++ b/src/app/feature/landing/components/order-widget/order-widget.component.html
@@ -25,7 +25,7 @@
             <div class="column-section">
             </div>
             <div class="frame-column">
-                <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeIyRi8o68ROJtK6xB-1bq6taeiUGKKGfEHQ3yAYajVdVixOA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">
+                <iframe class="google-form-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeIyRi8o68ROJtK6xB-1bq6taeiUGKKGfEHQ3yAYajVdVixOA/viewform?embedded=true&hl=en" frameborder="0" marginheight="0" marginwidth="0">
                     Loading…
                 </iframe>
             </div>
