--- a/src/app/feature/controls/menu/menu-component.scss
+++ b/src/app/feature/controls/menu/menu-component.scss
@@ -1,19 +1,19 @@
 .menu-component {
     display: flex;
     line-height: 3em;
+    flex-flow: column;
+    align-items: flex-start;
 
-    &.horizontal{
-        justify-content: space-between;
-        flex-flow: row wrap;
-        align-items: center;
-
-        @include phones-portrait {
-            flex-flow: column;
-            align-items: flex-start;
+    &.horizontal {
+        @include desktop-or-landscape {
+            justify-content: space-between;
+            align-items: center;
+            flex-flow: row;
         }
     }
 
     .menu-item {
         white-space: nowrap;
+        padding-right: 1em;
     }
 }
