--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -38,8 +38,13 @@ section {
 }
 
 .section {
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-left: 50px;
+    margin-right: 50px;
+
+    @include wide-screen {
+        margin-left: 70px;
+        margin-right: 70px;
+    }
 
     @include phones-portrait {
         margin-left: 30px;
